--- a/index.html
+++ b/index.html
@@ -7,81 +7,31 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-    <header>
-      <h1>CMS</h1>
-      <div class="wrapper-header">
-        <div class="notif"></div>
-        <div class="profile">
-          <img src="./img/avatar-15.png" alt="Foto" class="avatar" />
-          <p class="username">Ivanna Pavlyshyn</p>
-        </div>
-      </div>
-    </header>
+    <div id="header-placeholder"></div>
     <div class="main-wrapper">
-      <aside>
-        <nav>
-          <ul class="nav-list">
-            <li><a class="nav-item" href="./dashboard.html">Dashboard</a></li>
-            <li><a class="nav-item active" href="./index.html">Students</a></li>
-            <li><a class="nav-item" href="./tasks.html">Tasks</a></li>
-          </ul>
-        </nav>
-      </aside>
+      <div id="sidebar-placeholder"></div>
       <main>
-        
         <h2>Students</h2>
         <table>
-          <tr>
-            <th>
-              <input type="checkbox" />
-            </th>
-            <th>Group</th>
-            <th>Name</th>
-            <th>Gender</th>
-            <th>Birthday</th>
-            <th>Status</th>
-            <th>Options</th>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
+          <thead>
+            <tr>
+              <th><input type="checkbox" /></th>
+              <th>Group</th>
+              <th>Name</th>
+              <th>Gender</th>
+              <th>Birthday</th>
+              <th>Status</th>
+              <th>Options</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td colspan="7">No data</td>
+            </tr>
+          </tbody>
         </table>
       </main>
     </div>
-    <footer></footer>
+    <script src="./main.js"></script>
   </body>
-  <script src="./main.js"></script>
 </html>
