--- a/dashboard.html
+++ b/dashboard.html
@@ -7,28 +7,9 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header>
-      <h1>CMS</h1>
-      <div class="wrapper-header">
-        <div class="notif"></div>
-        <div class="profile">
-          <img src="./img/avatar-15.png" alt="Foto" class="avatar" />
-          <p class="username">Ivanna Pavlyshyn</p>
-        </div>
-      </div>
-    </header>
+    <div id="header-placeholder"></div>
     <div class="main-wrapper">
-      <aside>
-        <nav>
-          <ul class="nav-list">
-            <li>
-              <a class="nav-item active" href="./dashboard.html">Dashboard</a>
-            </li>
-            <li><a class="nav-item" href="./index.html">Students</a></li>
-            <li><a class="nav-item" href="./tasks.html">Tasks</a></li>
-          </ul>
-        </nav>
-      </aside>
+      <div id="sidebar-placeholder"></div>
       <main>
         <h2>Dashboard</h2>
       </main>
