stylized and thead

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Students</title>
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <div id="header-placeholder"></div>
@@ -15,7 +15,7 @@
         <table>
           <thead>
             <tr>
-              <th><input type="checkbox" /></th>
+              <th><input onclick="checkTh()" type="checkbox" id="checkbox1" /><label for="checkbox1"></label></th>
               <th>Group</th>
               <th>Name</th>
               <th>Gender</th>
@@ -32,6 +32,6 @@
         </table>
       </main>
     </div>
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
