--- a/index.html
+++ b/index.html
@@ -44,12 +44,24 @@
     </div>
     <div id="wrapper-shadow">
       <div id="addStudent">
-        <div id="button-close" onclick="closeAdd()">+</div>
+        <div class="button-close" onclick="closeAdd()">+</div>
         <h3 id="add_text">Add student</h3>
         <h3 id="edit_text">Edit student</h3>
         <div class="line"></div>
         <form id="form-add">
           <fieldset id="fieldset-add">
+            <div class="form-item">
+              <label for="input-date">Birthday</label>
+              <input id="input-date" type="date" />
+            </div>
+            <div class="form-item">
+              <label for="fname">First name</label>
+              <input type="text" id="fname" name="fname" />
+            </div>
+            <div class="form-item">
+              <label for="lname">Last name</label>
+              <input type="text" id="lname" name="lname" />
+            </div>
             <div class="form-item">
               <label for="select-group">Group</label>
               <select name="group" id="select-group">
@@ -61,24 +73,12 @@
               </select>
             </div>
             <div class="form-item">
-              <label for="fname">First name</label>
-              <input type="text" id="fname" name="fname" />
-            </div>
-            <div class="form-item">
-              <label for="lname">Last name</label>
-              <input type="text" id="lname" name="lname" />
-            </div>
-            <div class="form-item">
               <label for="select-gender">Gender</label>
               <select name="group" id="select-gender">
                 <option value="selected">Select gender</option>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
               </select>
-            </div>
-            <div class="form-item">
-              <label for="input-date">Birthday</label>
-              <input id="input-date" type="date" />
             </div>
           </fieldset>
         </form>
@@ -94,7 +94,7 @@
         </div>
       </div>
       <div id="delete-wraper">
-        <div id="button-close" onclick="closeDel()">+</div>
+        <div class="button-close" onclick="closeDel()">+</div>
         <h3>Warnings</h3>
         <div class="line"></div>
         <p id="war_text">
@@ -107,6 +107,15 @@
             OK
           </button>
         </div>
+      </div>
+      <div id="info-student-wraper">
+        <div class="button-close" onclick="closeInfo()">+</div>
+        <h4>Information about student</h4>
+        <p class="info-student-p" id="group-det"></p>
+        <p class="info-student-p" id="username-det"></p>
+        <p class="info-student-p" id="gender-det"></p>
+        <p class="info-student-p" id="birthday-det"></p>
+        <p class="info-student-p" id="status-det"></p>
       </div>
     </div>
   </body>
