--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
             <tbody id="main-tbody"></tbody>
           </table>
         </div>
+        <div class="pagination">
+          <a href="#">«</a>
+          <a href="#" class="active">1</a>
+          <a href="#">2</a>
+          <a href="#">3</a>
+          <a href="#">4</a>
+          <a href="#">5</a>
+          <a href="#">6</a>
+          <a href="#">»</a>
+        </div>
       </main>
     </div>
     <div id="wrapper-shadow">
