--- a/tasks.html
+++ b/tasks.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A site to manage and interact with the online student list">
     <title>Tasks</title>
     <link rel="stylesheet" href="./css/main.css" />
   </head>
@@ -16,7 +17,8 @@
       </main>
     </div>
     <footer></footer>
+    <script src="./js/main.js"></script>
+    <script src="./js/components.js"></script>
   </body>
-  <script src="./js/main.js"></script>
-  <script src="./js/components.js"></script>
+
 </html>
